# Question-Decomposition-LLM-Fine-Tuning

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUNPOD_GUIDE.md  docker-compose.yml  download_models.py  inference.py  pyproject.toml  requirements.txt  train.py  verify_versions.py
.devcontainer/: devcontainer.json
configs/: config.yaml  config_low_memory.yaml
data/: DATA_FORMAT.md
data/examples/: sample_train.json  sample_train.jsonl
scripts/: docker_run.sh  train_local.sh  train_low_memory.sh  train_runpod.sh
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  model_loader.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  helpers.py
