[tool.poetry]
name = "question-decomposition-llm"
version = "0.1.0"
description = "Question Decomposition LLM Fine-Tuning with LoRA"
authors = ["WB-Jang"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
transformers = "^4.36.0"
peft = "^0.7.0"
datasets = "^2.16.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"
sentencepiece = "^0.1.99"
protobuf = "^4.25.0"
wandb = "^0.16.0"
tqdm = "^4.66.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
